[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.1"
iced = "0.13.1"
once_cell = "1.20.2"
serde = "1.0.213"
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
